--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,10 @@ body {
     color: #00BFA6;
 }
 
+.media {
+    color: #e17705;
+}
+
 .attention {
     color: #dc2626;
 }
@@ -171,7 +175,9 @@ body {
 
 @media screen and (min-width: 1024px){
     #container {
-        justify-content: space-around;
+        justify-content: space-around;   
+    }
+    #calculator {
         width: 40%;
     }
 }
@@ -180,7 +186,6 @@ body {
     #container {
         width: 100%;
         height: 100vh;
-        min-height: 50vh;
     }
 
     #calculator {
